--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
         
         <div class="pet-container">
             <div class="pet" ontouchstart="petKitty()" onclick="petKitty()">
-                <img src="https://placekitten.com/200/200" alt="Cute Kitty" />
+                <img src="nekodya.png" alt="Cute Kitty" />
             </div>
             <div class="heart-meter">
                 <div class="heart-progress" id="heartProgress"></div>
